2016-01-13  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r24112.

	* src/gsad.c (init_validator): Correct regular expressions for
	"cmd", "boolean", "min_cvss_base", "day_of_month", "hosts_allow",
	"month", "package_format", "port_type" and "calendar_unit".

2016-01-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* src/gsad.c, src/html/classic/gsad.xsl,
	src/html/classic/help.xsl, src/html/classic/help_ru.xsl:
	Update copyright year.

2016-01-12  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* src/html/classic/help.xsl, CMakeLists.txt: Set version to 6.0.9.

2016-01-12  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the gsa 6.0.8 release.

	* CHANGES: Updated.

2015-01-11  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r24079.

	* src/gsad.c (request_handler): If "url" starts with "//" then drop the
	connection, otherwise the guest link can be used as a redirect.

2016-01-08  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r24068.

	* src/html/classic/graphics.xsl: Apply escaping to all generated
	JS strings.

	* src/html/classic/js/gsa_graphics_base.js (unescapeXML): New function.

	* src/html/classic/omp.xsl (gsa:escape-js): Escape special characters
	to XML entities.

2016-01-08  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r24055 without asset_type case.

	* src/gsad.c (init_validator): Make regex match options for
	aggregate_type and sort_order exactly.

2015-12-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r24018 and add some missing conditions for Note actions.

	* src/html/classic/omp.xsl (note-detailed, override-detailed): Disable
	trash, edit and clone buttons if current user lacks permission or
	the action cannot be performed for other reasons.

2015-12-21  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/gsad_omp.c (page_url): Build type specific id parameter from
	next_type and next_id.
