@@ -1,3 +1,11 @@
+2016-01-31  Matthew Mundell <matthew.mundell@greenbone.net>
+
+	Backport r24261.
+
+	* src/gsad.c (request_handler): Check that params has been setup before
+	accessing param "cmd", because in some cases params is still NULL.
+	Prevents a Glib critical error due to accessing NULL as a hashtable.
+
 2016-01-13  Timo Pollmeier <timo.pollmeier@greenbone.net>
 
 	Backport r24112.
